<resources>
    <string name="app_name">Alap</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="emaillogin">Email</string>
    <string name="passwordlogin">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="alap">Alap</string>
    <string name="at_your_service">At your service</string>
    <string name="check_yourself">Check Yourself</string>
    <string name="make_reminder">Make Reminder</string>
    <string name="article">article</string>
    <string name="game">game</string>
    <string name="article_list">Article List</string>
    <string name="quiz">Quiz</string>
    <string name="let_s_take_a_screening_test_click_below_to_proceed">Let\'s Take a screening test. Click below to proceed</string>
    <string name="click_me">Click me</string>
    <string name="guess_the_fruit">Guess The fruit</string>
    <string name="restart">Restart</string>
    <string name="_0_7">0/7</string>
    <string name="points">Points:</string>
    <string name="guess_the_celebrity">Guess The Celebrity</string>
    <string name="guess_which_one_is_fruit">Guess Which one is fruit?</string>
    <string name="todo">TODO</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="update_user">Update user</string>
    <string name="enter_name_here2">Enter name here</string>
    <string name="add_new_user">Add new user</string>
    <string name="please_take_the_medicines_on_time_navoid_snoozing_the_reminder">Please take the medicines on time.\nAvoid snoozing the reminder.</string>
    <string name="snooze_alarm">Snooze Alarm</string>
    <string name="took_medicine">Took Medicine</string>
    <string name="please_take_the_following_medicine">Please take the following medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="qty_10">Qty: 10</string>
    <string name="_10_45_pm">10:45 PM</string>
    <string name="empty_users" />
    <string name="quizapp" />
    <string name="angel_jude_suarez" />
    <string name="suarez081119_gmail_com" />
    <string name="glenn_azuelo" />
    <string name="start" />
    <string name="enter_name">Enter name</string>
    <string name="_0">0</string>
    <string name="remind_things">Remind Things</string>
    <string name="UserName" />
    <string name="add_note">Add Note</string>
    <string name="Heading1" />
    <string name="channel_name">Reminder</string>
    <string name="channel_description">App Reminder and Alarm Notificaions</string>
    <string name="reminder">REMINDER</string>
    //diet
    <string name="dietmorning">
        \nDrink one cup of lemon tea
        \nEat starch(Ruti/Rice)
    </string>

    //excercise
    <string name="exmorn">
        \nWalk minimum 20 minutes at normal speed

    </string>

    //sleep
    <string name="sleep">
        \nsleep at least 8 hours if you are 20-40 years old
        \nsleep at least 8 hourse if you are 10-20 years old
    </string>
    <string name="quit">
        \nquit smoking
        \nquit alcohol
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>